--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         // function fun (){}
         // typeof fun === "function";
 
-        // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在beckdeveloper
+        // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在
         
 
     </script>
