--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         // typeof fun === "function";
 
         // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在函数中进行使用
-        // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在函数中调用使用
         
 
     </script>
     <script src="./js/index.js"></script>
+    <script src="./js/common.js"></script>
 </html>
