--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         // typeof fun === "function";
 
         // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在函数中进行使用
-        
+        // 提交修改
 
     </script>
     <script src="./js/index.js"></script>
