--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在函数中进行使用
         // 提交修改
 
+        // dev冲突提交
+
     </script>
     <script src="./js/index.js"></script>
 </html>
