--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         // 设置回调函数 ：一个函数作为另一个函数的参数进行传递，并在函数中进行使用
         // 提交修改
 
-        // developer提交冲突
+        // dev冲突提交
 
     </script>
     <script src="./js/index.js"></script>
