--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             // console.log(action);
             // console.log(intro);
             //let const的注册范围包含了块级范围，即包含了for循环的范围
+
+            // 调试节点
             debugger;
             var testVar = 20;
             console.log(xunhuan);
@@ -49,6 +51,8 @@
         // 提交修改
 
         // developer提交冲突
+
+        // 
 
     </script>
     <script src="./js/index.js"></script>
