--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<meta charset="utf-8"  />
+    	<meta charset="utf-8" />
         <title>index</title>
+        <script src="https://cdn.staticfile.org/angular.js/1.4.6/angular.min.js"></script>
         <style src="./css/index.css"></style>
         <script src="./js/jquery-1.7.1.min.js"></script>
         
