--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 
         // developer提交冲突
 
-        // 
+        // 添加angularjs的效果和成果
 
     </script>
     <script src="./js/index.js"></script>
     <script src="./js/common.js"></script>
+
 </html>
