--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         // developer提交冲突
 
         // 添加angularjs的效果和成果
-        
+	// 添加dev的注释        
     </script>
     <script src="./js/index.js"></script>
     
