提交点击事件

--- a/promise.html
+++ b/promise.html
@@ -33,6 +33,9 @@
         var outer = document.querySelector('.outer');
         var inner = document.querySelector('.inner');
 
+        $("p").click(function(){
+            alert("点击字段");
+        })
         // Let's listen for attribute changes on the
         // outer element
         new MutationObserver(function() {
