--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     	<meta charset="utf-8" />
-        <title>index</title>
+        <title>index</title>0
         <script src="https://cdn.staticfile.org/angular.js/1.4.6/angular.min.js"></script>
         <style src="./css/index.css"></style>
         <script src="./js/jquery-1.7.1.min.js"></script>
@@ -78,13 +78,11 @@
        	// 添加master注释 
     </script>
     <script src="./js/index.js"></script>
-    
     <script src="./js/controller.js"></script>
     <script src="./js/directive.js"></script>
     <script src="./js/class.js"></script>
     <script src="./js/testThen.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/connectLoop.js"></script>
-
     <script src="./js/testJquery.js"></script>
 </html>
