--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     	<meta charset="utf-8" />
-        <title>index</title>0
+        <title>index</title>
         <script src="https://cdn.staticfile.org/angular.js/1.4.6/angular.min.js"></script>
         <style src="./css/index.css"></style>
         <script src="./js/jquery-1.7.1.min.js"></script>
@@ -75,18 +75,15 @@
         // developer提交冲突
 
         // 添加angularjs的效果和成果
-<<<<<<< HEAD
-	// 添加dev的注释        
-=======
-       	// 添加master注释 
->>>>>>> master
     </script>
     <script src="./js/index.js"></script>
+    
     <script src="./js/controller.js"></script>
     <script src="./js/directive.js"></script>
     <script src="./js/class.js"></script>
     <script src="./js/testThen.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/connectLoop.js"></script>
+
     <script src="./js/testJquery.js"></script>
 </html>
