--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             }
             re();
         }
-
+        console.log("打印结果集");
         // typeof fun === 'function';
         // var fun = 2;
         // function fun (){}
